Use CSS imports

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 /*****************************************************************/
 /*****************************************************************/
 /*****************************************************************/
+@import 'cssgraph_bar.css';
+@import 'cssgraph_plot.css';
 
 * {
     box-sizing: border-box;
