--- a/style.css
+++ b/style.css
@@ -20,13 +20,17 @@ body, html {
 }
 body {
     background: #fffff8;
-    font: 400 16px/1.5 "Palatino Linotype", "Book Antiqua", Palatino, Georgia, serif;
+    font: 400 16px/1.5 "et-book", "Palatino Linotype", "Book Antiqua", Palatino, Georgia, serif;
     margin: 0;
     padding: 0;
 }
 .intro {
     margin: 5em 0 8em;
     padding: 0 1em;
+}
+.intro p {
+    font-size: 120%;
+    margin: 0 0 0.5em 0;
 }
 /*h2*/.title {
     margin: 0 0 5em;
@@ -37,6 +41,10 @@ body {
     display: block;
     font-size: 80%;
 }
+footer {
+    padding: 0 0 2em;
+    text-align: center;
+}
 caption {
     font-style: italic;
 }
@@ -46,3 +54,8 @@ hr {
     height: 10em;
     width: 100%;
 }
+
+@font-face { font-family: "et-book"; src: url("/et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot"); src: url("/et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("/et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("/et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("/et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg"); font-weight: normal; font-style: normal; }
+@font-face { font-family: "et-book"; src: url("/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot"); src: url("/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg"); font-weight: normal; font-style: italic; font-display: swap; }
+@font-face { font-family: "et-book"; src: url("/et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot"); src: url("/et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("/et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("/et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("/et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg"); font-weight: bold; font-style: normal; font-display: swap; }
+@font-face { font-family: "et-book-roman-old-style"; src: url("/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot"); src: url("/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg"); font-weight: bold; font-style: normal; font-display: swap; }
